chore: add login with jwt auth