@@ -1,12 +1,11 @@
 package com.springSecurity.spring.security;
-
-
 import com.springSecurity.spring.security.jwt.JwtUtils;
 import com.springSecurity.spring.security.jwt.LoginRequest;
 import com.springSecurity.spring.security.jwt.LoginResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
@@ -14,51 +13,66 @@ import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
+
 @RestController
-public class AuthController {
+public class GreetingController {
+    @Autowired
+    private JwtUtils jwtUtils;
 
     @Autowired
-    private  AuthenticationManager authenticationManager;
+    private AuthenticationManager authenticationManager;
 
-    @Autowired
-    private  JwtUtils jwtUtils;
+    @GetMapping("/hello")
+    public String sayHello(){
+        return "Hello";
+    }
 
 
-    @PostMapping("/auth/signin")
+    @PreAuthorize("hasRole('USER')")
+    @GetMapping("/user")
+    public String userEndpoint(){
+        return "Hello, User!";
+    }
+
+    @PreAuthorize("hasRole('ADMIN')")
+    @GetMapping("/admin")
+    public String adminEndpoint(){
+        return "Hello, Admin!";
+    }
+
+
+    @PostMapping("/signin")
     public ResponseEntity<?> authenticateUser(@RequestBody LoginRequest loginRequest) {
         Authentication authentication;
-        try{
-            authentication=authenticationManager
-                    .authenticate(new UsernamePasswordAuthenticationToken(loginRequest.getUsername(),loginRequest.getPassword()));
-        }catch (AuthenticationException exception){
-            Map<String,Object> map = new HashMap<>();
-            map.put("message", "Invalid username or password");
-            map.put("status", 401);
-            map.put("success",false);
-            return new ResponseEntity<>(map, HttpStatus.UNAUTHORIZED);
+        try {
+            authentication = authenticationManager
+                    .authenticate(new UsernamePasswordAuthenticationToken(loginRequest.getUsername(), loginRequest.getPassword()));
+        } catch (AuthenticationException exception) {
+            Map<String, Object> map = new HashMap<>();
+            map.put("message", "Bad credentials");
+            map.put("status", false);
+            return new ResponseEntity<Object>(map, HttpStatus.NOT_FOUND);
         }
 
         SecurityContextHolder.getContext().setAuthentication(authentication);
 
         UserDetails userDetails = (UserDetails) authentication.getPrincipal();
 
-        String jwtToken =jwtUtils.generateJwtToken(userDetails);
+        String jwtToken = jwtUtils.generateTokenFromUsername(userDetails);
 
         List<String> roles = userDetails.getAuthorities().stream()
-                .map(GrantedAuthority::getAuthority)
-                .toList();
+                .map(item -> item.getAuthority())
+                .collect(Collectors.toList());
 
-        LoginResponse response = new LoginResponse(userDetails.getUsername(),roles,jwtToken);
+        LoginResponse response = new LoginResponse(userDetails.getUsername(), roles, jwtToken);
+
         return ResponseEntity.ok(response);
     }
 }
